--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coursera_cap",
   "version": "1.0.0",
-  "homepage": "https://aturner1995.github.io",
+  "homepage": "https://aturner1995.github.io/little-lemon/",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.4.6",
